[tool.poetry]
name = "examples"
version = "0.1.0"
description = ""
authors = ["Alexander Schueren <sha@amazon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aws-lambda-powertools = "^2.34.2"
requests = "^2.31.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
